force-app/main/default/objects/Envelope_Template__c/Envelope_Template__c.object-meta.xml
<CustomObject>
    <label>Envelope Template</label>
    <nameField>
        <label>Envelope Template</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Envelope Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>