force-app/main/default/objects/Envelope_Template__c/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <label>Branding</label>
    <referenceTo>Business_Unit_Branding__c</referenceTo>
    <relationshipLabel>Envelope Templates</relationshipLabel>
    <relationshipName>Branding_Envelope_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>