force-app/main/default/objects/Envelope_Template__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Envelope Templates</relationshipLabel>
    <relationshipName>Business_Unit_Envelope_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>