force-app/main/default/objects/Envelope_Template__c/fields/Default_Topics__c.field-meta.xml
<CustomField>
    <fullName>Default_Topics__c</fullName>
    <label>Default Topics</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>
        Semicolon- or comma-separated list of default SignatureAPI topics 
        to apply when creating an envelope from this template.
    </description>
</CustomField>