force-app/main/default/objects/Envelope_Template__c/fields/Signing_Complete_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Signing_Complete_Email_Template__c</fullName>
    <label>Signing Complete Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>