force-app/main/default/objects/Envelope_Template__c/fields/Signing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Signing_Mode__c</fullName>
    <label>Signing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sequential</fullName>
                <default>true</default>
                <label>Sequential</label>
            </value>
            <value>
                <fullName>Parallel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>